# techne

./: .gitattributes  .gitignore  COMPONENTS.md  CONTEXT.md  HANDOFF-CC-V0.md  HANDOFF.md  INSTALL.md  README.md  SKILL.md  next  pyproject.toml  tasks.db
.claude/: settings.json
.techne/: config.yaml  genesis.json  loop-plan.md
agents/: concluder.md  conductor.md  context-guard.md  context-preflight.md  critique.md  debugger.md  implementer.md  recaller.md  retro.md  reviewer.md  verifier.md
commands/: techne.toml
docs/: INSTALL-HERMES.md  agent-knowledge-dimensions.md  enforcement-operations.md  host-integration-guide.md  open-knowledge-format-context.md  techne-domains.md
harness/: _loop_types.py  _orchestrator_context.py  _orchestrator_helpers.py  _orchestrator_retry.py  _recall_implement.py  _retro_conclude.py  _review_approval.py  apply_retro.py  checkpoint.py  classify.py  conductor.py  context_build.py  context_preflight.py  diff_parser.py  driver.py  enforcement.py  evaluator.py  gate-config.yaml  gate_evolution.py  gate_registry.py  gates.py  grpo.py  implementer_output.txt  intent_reasoner.py  ledger.py  measure.py  mistakes.py  model_backends.py  orchestrator_loop.py  phase_skills.py  pipeline_enforcer.py  prompt_evolution.py  requirements.txt  reward.py  reward_log.py  router.py  sandbox_runner.py  session.py  sha_gate.py  skill-router.yaml  (+8 more)
hooks/: phase_guard_hook.py
memory/: SESSION.md  eval_history.json  ledger.md  mistakes.md  reward.md  run_log.json  wikilinks.json
receptionist/: SKILL.md
ref/: HANDOFF-HERMES.md  README.md  (+5 more)
(+326 files in other folders)
